# async_runtime

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.in
.github/workflows/: build.yml  c-cpp.yml
benchmarks/: CMakeLists.txt  benchmarks.cpp
cmake/: asm.cmake  boost.cmake  doxygen.cmake  flatbuffers.cmake  gpu.cmake  libuv.cmake  llhttp.cmake  opencv.cmake  tbb.cmake  trace.cmake
data/profiler/: package-lock.json  package.json  profiler.html  profiler.js  profiler.ts
docs/: Doxyfile.in  arch.md  benchmarks.md  channels.md  io.md  profiling.md  readme.md  usage.md
examples/: CMakeLists.txt  async_sleep.cpp  async_task.cpp  async_ticker.cpp  channel.cpp  coroutine.cpp  coroutine_fib.cpp  coroutine_tree.cpp  dns.cpp  example.cpp  ffmpeg_context.h.tmp  ffmpeg_example.cpp.tmp  ffmpeg_tcp_context.h.tmp  ffmpeg_udp_context.h.tmp  gpu.cpp  gpu_executor.cpp  http_client.cpp  http_multipart_client.cpp  http_server.cpp  io.cpp  memory_managment.cpp  metricer.cpp  profiler.cpp  runtime.cpp  tcp_client.cpp  tcp_server.cpp  triple_buffer.cpp  udp.cpp  uv_test.cpp  work_groups.cpp
include/ar/: allocators.hpp  ar.hpp  array.hpp  awaiter.hpp  channel.hpp  config.hpp  context_switcher.hpp  coroutine.hpp  cpu_helper.hpp  executor.hpp  flat_buffer.hpp  function.h  function.hpp  helper.hpp  http.hpp  io_executor.hpp  io_task.h  io_task.hpp  iterator.hpp  logger.hpp  macros.hpp  metricer.hpp  net.hpp  notifier.hpp  object.hpp  opencv_executor.h  os.hpp  pooled_stack.hpp  processor.hpp  processor_group.hpp  profiler.hpp  resource.hpp  resource_pool.hpp  runtime.hpp  scheduler.hpp  stack.hpp  stream.hpp  stream_buffer.hpp  task.hpp  task_queue.hpp  (+9 more)
include/ar/dataflow/: consumer.hpp  dataflow.hpp  fifo_shared_buffer.hpp  graph.hpp  kernel.hpp  kernel_events.hpp  notifier.hpp  port.hpp  port_controller.hpp  shared_buffer.hpp  shared_buffer_factory.hpp  sink.hpp  source.hpp  triple_shared_buffer.hpp
include/ar/gpu/: gpu.hpp
include/ar/io/: http.hpp  http_digest_authenticator.hpp  io.hpp  tcp.hpp  udp.hpp
profiler-viewer/: README.md  package-lock.json  package.json  profiler.html  profiler.js  profiler.ts
src/: awaiter.cpp  base64.cpp  base64.h  context_switcher.cpp  coroutine.cpp  cpu_helper.cpp  epoll.cpp  epoll.hpp  executor.cpp  executor_slot.cpp  executor_slot.h  io_executor.cpp  io_task.cpp  logger.cpp  net.cpp  notifier.cpp  numbers.cpp  numbers.h  opencv_executor.cpp  os.cpp  processor.cpp  processor_group.cpp  profiler.cpp  resource.cpp  resource_pool.cpp  runtime.cpp  scheduler.cpp  stack.cpp  stream.cpp  task.cpp  tcp.cpp  thread_executor.cpp  ticker.cpp  trace.cpp  trace.h  work_notifier.h
src/dataflow/: kernel.cpp  notifier.cpp  port.cpp  port_controller.cpp  sink.cpp  source.cpp
src/fbs/: TraceSchema.fbs  profiler_schema.fbs
src/gpu/: gpu.cpp
src/http/: http.cpp  http_fields.cpp  http_status.cpp  url.cpp  url.hpp
src/io/: http.cpp  http_digest_authenticator.cpp  io.cpp  io_executor.cpp  io_executor.h  io_http_task.h  io_task.h  tcp.cpp  udp.cpp
src/tbb/: tbb_delayed_scheduler.cpp  tbb_delayed_scheduler.h  tbb_executor.cpp  tbb_executor.h  tbb_io_executor.cpp  tbb_io_executor.h  tbb_stream.cpp  tbb_stream.h
tests/: AllocatorTest.cpp  ArrayTest.cpp  CMakeLists.txt  Catch.cmake  CatchAddTests.cmake  ChannelTest.cpp  CoroutineTest.cpp  DataflowKernelTest.cpp  DataflowNotifierTest.cpp  DataflowSinkTest.cpp  DataflowSourceTest.cpp  ExecutorTest.cpp  IOFsTaskTest.cpp  NotifierTest.cpp  NumbersTest.cpp  ParseAndAddCatchTests.cmake  ResourcePoolTest.cpp  StreamBufferTest.cpp  StreamTest.cpp  TaskTest.cpp  catch.hpp
